Fixes header size on mobile

--- a/themes/supersimple/assets/styles/header.scss
+++ b/themes/supersimple/assets/styles/header.scss
@@ -175,7 +175,7 @@ header {
             }
 
             &.no-date {
-                .path-title h1 {
+                .path-title .title {
                     margin-bottom: 0;
                 }
             }
